--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
 
 <div class="col-md-12 quitar-float text-center espacio-arriba">
 
-  <a href="banda.html" class="espacio-derecha"><img src="fotos/banda.png" " width=180, height=175, top=0, left=0"></a>
-  <a href="bachata.html" class="espacio-derecha"><img src="fotos/bachata.png" " width=180, height=175, top=0, left=0"></a>
-  <a href="djs.html" class="espacio-derecha"><img src="fotos/djs.png" " width=180, height=175, top=0, left=0"></a>
-  <a href="ska.html" class="espacio-derecha"><img src="fotos/ska.png" " width=180, height=175, top=0, left=0"></a>
+  <a href="https://detodonline.000webhostapp.com/banda.html" class="espacio-derecha"><img src="fotos/banda.png" " width=180, height=175, top=0, left=0"></a>
+  <a href="https://detodonline.000webhostapp.com/bachata.html" class="espacio-derecha"><img src="fotos/bachata.png" " width=180, height=175, top=0, left=0"></a>
+  <a href="https://detodonline.000webhostapp.com/djs.html" class="espacio-derecha"><img src="fotos/djs.png" " width=180, height=175, top=0, left=0"></a>
+  <a href="https://detodonline.000webhostapp.com/ska.html" class="espacio-derecha"><img src="fotos/ska.png" " width=180, height=175, top=0, left=0"></a>
 
   </div>
   <br>
   <div class="col-md-12 quitar-float text-center espacio-arriba">
 
-  <a href="bailar.html" class="espacio-derecha"><img src="fotos/bailar.png" " width=180, height=175, top=0, left=0"></a>
-  <a href="balds.html" class="espacio-derecha"><img src="fotos/balds.png" " width=180, height=175, top=0, left=0"></a>
-  <a href="pop.html" class="espacio-derecha"><img src="fotos/pop.png" " width=180, height=175, top=0, left=0"></a>
-  <a href="hiphop.html" class="espacio-derecha"><img src="fotos/hiphop.png" " width=180, height=175, top=0, left=0"></a>
+  <a href="https://detodonline.000webhostapp.com/bailar.html" class="espacio-derecha"><img src="fotos/bailar.png" " width=180, height=175, top=0, left=0"></a>
+  <a href="https://detodonline.000webhostapp.com/balds.html" class="espacio-derecha"><img src="fotos/balds.png" " width=180, height=175, top=0, left=0"></a>
+  <a href="https://detodonline.000webhostapp.com/pop.html" class="espacio-derecha"><img src="fotos/pop.png" " width=180, height=175, top=0, left=0"></a>
+  <a href="https://detodonline.000webhostapp.com/hiphop.html" class="espacio-derecha"><img src="fotos/hiphop.png" " width=180, height=175, top=0, left=0"></a>
 
   </div>
   <br>
   <div class="col-md-12 quitar-float text-center espacio-arriba">
 
-  <a href="trap.html" class="espacio-derecha"><img src="fotos/trap.png" " width=180, height=175, top=0, left=0"></a>
-  <a href="viejitas.html" class="espacio-derecha"><img src="fotos/viejitas.png" " width=180, height=175, top=0, left=0"></a>
-  <a href="regg.html" class="espacio-derecha"><img src="fotos/regg.png" " width=180, height=175, top=0, left=0"></a>
-  <a href="rock.html" class="espacio-derecha"><img src="fotos/rock.png" " width=180, height=175, top=0, left=0"></a>
+  <a href="https://detodonline.000webhostapp.com/trap.html" class="espacio-derecha"><img src="fotos/trap.png" " width=180, height=175, top=0, left=0"></a>
+  <a href="https://detodonline.000webhostapp.com/viejitas.html" class="espacio-derecha"><img src="fotos/viejitas.png" " width=180, height=175, top=0, left=0"></a>
+  <a href="https://detodonline.000webhostapp.com/regg.html" class="espacio-derecha"><img src="fotos/regg.png" " width=180, height=175, top=0, left=0"></a>
+  <a href="https://detodonline.000webhostapp.com/rock.html" class="espacio-derecha"><img src="fotos/rock.png" " width=180, height=175, top=0, left=0"></a>
 
   </div>
   <h1 class="shadow grande azul col-md-12 center-block quitar-float text-center">
