--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="col-md-12 quitar-float text-center espacio-arriba">
 
-  <a href="https://detodonline.000webhostapp.com/banda.html" class="espacio-derecha"><img src="fotos/banda.png" " width=180, height=175, top=0, left=0"></a>
+  <a href="https://detodonline.000webhostapp.com/band.html" class="espacio-derecha"><img src="fotos/banda.png" " width=180, height=175, top=0, left=0"></a>
   <a href="https://detodonline.000webhostapp.com/bachata.html" class="espacio-derecha"><img src="fotos/bachata.png" " width=180, height=175, top=0, left=0"></a>
   <a href="https://detodonline.000webhostapp.com/djs.html" class="espacio-derecha"><img src="fotos/djs.png" " width=180, height=175, top=0, left=0"></a>
   <a href="https://detodonline.000webhostapp.com/ska.html" class="espacio-derecha"><img src="fotos/ska.png" " width=180, height=175, top=0, left=0"></a>
